# Shorthand_words

./: .gitignore  CMakeLists.txt  CharacterFile.cpp  README.md  security.cpp
include/: security.hpp
